--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <dependency>
       <groupId>com.celements</groupId>
       <artifactId>celements-core</artifactId>
-      <version>3.10</version>
+      <version>3.11-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
