--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <dependency>
       <groupId>com.celements</groupId>
       <artifactId>celements-model</artifactId>
-      <version>3.15</version>
+      <version>3.16-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
