--- a/pom.xml
+++ b/pom.xml
@@ -21,13 +21,13 @@
     <dependency>
       <groupId>com.celements</groupId>
       <artifactId>celements-model</artifactId>
-      <version>3.16-SNAPSHOT</version>
+      <version>3.16</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.celements</groupId>
       <artifactId>celements-core</artifactId>
-      <version>3.11-SNAPSHOT</version>
+      <version>3.11</version>
       <scope>provided</scope>
     </dependency>
 
