--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.celements</groupId>
     <artifactId>celements</artifactId>
-    <version>4.0-M1</version>
+    <version>4.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>celements-webdav</artifactId>
@@ -15,19 +15,19 @@
     <dependency>
       <groupId>com.celements</groupId>
       <artifactId>celements-xwiki-core</artifactId>
-      <version>4.0-M1.1</version>
+      <version>4.0</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.celements</groupId>
       <artifactId>celements-model</artifactId>
-      <version>4.0-M1</version>
+      <version>4.0</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.celements</groupId>
       <artifactId>celements-core</artifactId>
-      <version>4.0-M1</version>
+      <version>4.0</version>
       <scope>provided</scope>
     </dependency>
 
