--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.celements</groupId>
     <artifactId>celements</artifactId>
-    <version>5.1</version>
+    <version>5.2-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>celements-webdav</artifactId>
@@ -15,19 +15,19 @@
     <dependency>
       <groupId>com.celements</groupId>
       <artifactId>celements-xwiki-core</artifactId>
-      <version>5.1</version>
+      <version>5.2-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.celements</groupId>
       <artifactId>celements-model</artifactId>
-      <version>5.0.1</version>
+      <version>5.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.celements</groupId>
       <artifactId>celements-core</artifactId>
-      <version>5.0.1</version>
+      <version>5.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
 
@@ -36,7 +36,7 @@
       <!-- Sardine WebDAV Client -->
       <groupId>com.github.lookfirst</groupId>
       <artifactId>sardine</artifactId>
-      <version>5.8</version>
+      <version>5.10</version>
     </dependency>
   </dependencies>
   <scm>
