--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   <parent>
     <groupId>com.celements</groupId>
     <artifactId>celements</artifactId>
-    <version>5.2-SNAPSHOT</version>
+    <version>5.2</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>celements-webdav</artifactId>
@@ -37,19 +37,19 @@
     <dependency>
       <groupId>com.celements</groupId>
       <artifactId>celements-xwiki-core</artifactId>
-      <version>5.2-SNAPSHOT</version>
+      <version>5.2</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.celements</groupId>
       <artifactId>celements-model</artifactId>
-      <version>5.1-SNAPSHOT</version>
+      <version>5.1</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.celements</groupId>
       <artifactId>celements-core</artifactId>
-      <version>5.1-SNAPSHOT</version>
+      <version>5.1</version>
       <scope>provided</scope>
     </dependency>
 
